@@ -207,7 +207,7 @@ module ActiveRecord
       unserialized_object = object_from_yaml(@attributes[attr_name])
 
       if unserialized_object.is_a?(self.class.serialized_attributes[attr_name]) || unserialized_object.nil?
-        @attributes[attr_name] = unserialized_object
+        @attributes.frozen? ? unserialized_object : @attributes[attr_name] = unserialized_object
       else
         raise SerializationTypeMismatch,
           "#{attr_name} was supposed to be a #{self.class.serialized_attributes[attr_name]}, but was a #{unserialized_object.class.to_s}"
