@@ -1,4 +1,5 @@
 require 'abstract_unit'
+require 'fixtures/topic'
 
 class AttributeMethodsTest < Test::Unit::TestCase
   def setup
@@ -45,5 +46,13 @@ class AttributeMethodsTest < Test::Unit::TestCase
       assert_equal ['title', 'a'], topic.send(meth, 'a')
       assert_equal ['title', 1, 2, 3], topic.send(meth, 1, 2, 3)
     end
+  end
+  
+  def test_should_unserialize_attributes_for_frozen_records
+    myobj = {:value1 => :value2}
+    topic = Topic.create("content" => myobj)
+    topic.freeze
+    assert_equal myobj, topic.content
+    
   end
 end
